[package]
name = "RESTful-image"
version = "0.1.0"
authors = ["Mikhail Pogretskiy <mikhail.pogretskiy@gmail.com>"]
edition = "2018"

[dependencies]
actix = "*"
actix-web = "*"
base64 = "*"
bytes = "*"
chrono = { version = "*", features = ["serde"] }
clap  = { version = "*", features = ["yaml"] }
diesel = { version = "*", features = ["postgres", "chrono", "r2d2", "uuid"] }
futures = "*"
listenfd = "*"
log = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
stderrlog = "*"
uuid = { version = "^0.6", features = ["serde", "v4"] }
