[package]
name = "restful-image"
version = "0.1.0"
authors = ["Mikhail Pogretskiy <mikhail.pogretskiy@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8"
actix-web = "1.0"
actix-multipart = "*"
base64 = "*"
bytes = "*"
chrono = { version = "*", features = ["serde"] }
clap  = { version = "*", features = ["yaml"] }
diesel = { version = "*", features = ["postgres", "chrono", "r2d2", "uuid"] }
futures = "*"
listenfd = "*"
log = "*"
mime = "^0.3"
serde = "*"
serde_derive = "*"
serde_json = "*"
stderrlog = "*"
uuid = { version = "^0.6", features = ["serde", "v4"] }
